modified landing page

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Church Management System -Trial Version"
 APP_ENV=local
 APP_KEY=base64:FcBvWn6OwmT/MmthAXBw/7jYQavalk8A0CxYR3Zu5T4=
 APP_DEBUG=true
